--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="menu">
             <nav class="nav1">
                 <ul>
-                    <li><a href="Home.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="About_us.html">About us</a></li>
                     <li><a href="Services.html">Services</a></li>
                     <li><a href="Gallery.html">Gallery</a></li>
